# ai-review-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: main.py  model.py
api/templates/: index.html
data/processed/: dataset_stats.txt
data/stress_test/: stress_test_report.txt  stress_test_results.csv  stress_test_reviews.csv
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  styles.css
models/: misclassifications.csv  test_metrics.json  training_metrics.json
scripts/: collect_yelp.py  generate_fake_reviews.py  generate_gpt_reviews.py  prepare_dataset.py  stress_test.py  train.py
