[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-review-detector"
version = "0.1.0"
description = "DistilBERT classifier to detect AI-generated restaurant reviews"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "scikit-learn>=1.3.0",
    "accelerate>=0.25.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "anthropic>=0.20.0",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "scripts*"]
